--- a/쪽지_확인페이지.html → index.html
+++ b/쪽지_확인페이지.html → index.html
@@ -43,7 +43,7 @@
       }
 
       try {
-        const res = await fetch("https://docs.google.com/spreadsheets/d/11_05T4kntGTxJo24xUet2fGOLwpykLuEREi5IstMrIE/edit?usp=sharing");
+        const res = await fetch("https://script.google.com/macros/s/https://docs.google.com/spreadsheets/d/11_05T4kntGTxJo24xUet2fGOLwpykLuEREi5IstMrIE/edit?usp=sharing/exec");
         const data = await res.json();
         const student = data.find(d => d.studentId === studentId);
 
